# grounded-ops-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: pricing.json
docs/: BUILD_PROMPT.md  architecture.md
frontend/: index.html
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: ask.py  benchmark.py  build_gold.py  ingest.py  run_eval.py  search.py  seed_db.py  smoke.py
src/app/: __init__.py  main.py
src/app/agent/: __init__.py  citation_registry.py  citations.py  faithfulness.py  generation.py  guardrails.py  orchestrator.py  prompts.py  tool_executor.py
src/app/api/: __init__.py  chat.py  deps.py  health.py  ingest.py  search.py
src/app/core/: __init__.py  db.py  errors.py  logging.py  pricing.py  settings.py
src/app/db/: __init__.py  base.py  models.py
src/app/eval/: __init__.py  gold.jsonl  gold.py  harness.py  metrics.py
src/app/ingestion/: __init__.py  chunker.py  indexer.py  loaders.py  store.py
src/app/llm/: __init__.py  anthropic_provider.py  base.py  echo_provider.py  embeddings.py  factory.py  openai_provider.py  types.py
src/app/mcp_client/: __init__.py  client.py
src/app/mcp_server/: __init__.py  __main__.py  analytics.py  server.py
src/app/retrieval/: __init__.py  benchmark.py  faiss_store.py  pgvector_store.py  reranker.py  rrf.py  service.py  types.py  vector_store.py
src/app/schemas/: __init__.py  chat.py  common.py
src/app/security/: __init__.py  whitelist.py
src/app/seed/: __init__.py  generator.py  loader.py
src/app/tools/: __init__.py  adapter.py
tests/: conftest.py
tests/fakes/: __init__.py  providers.py
tests/integration/: conftest.py  test_agent.py  test_api.py  test_db_seed.py  test_ingest.py  test_mcp_tools.py  test_retrieval.py
tests/unit/: test_analytics_validation.py  test_chat_events.py  test_chunker.py  test_citation_registry.py  test_citations.py  test_embeddings.py  test_eval_metrics.py  test_faiss_store.py  test_faithfulness.py  test_generation.py  test_guardrails.py  test_health.py  test_ingestion_idempotent.py  test_orchestrator.py  test_pricing.py  test_retrieval_service.py  test_rrf.py  test_seed_generator.py  test_settings.py  test_tool_adapter.py  test_whitelist.py
